--- a/PresentationLayer/UICommon/MainStoryboards/LaunchScreen.storyboard
+++ b/PresentationLayer/UICommon/MainStoryboards/LaunchScreen.storyboard
@@ -18,18 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="PIp-sd-hre">
-                                <rect key="frame" x="107" y="348" width="200" height="200"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qqq" translatesAutoresizingMaskIntoConstraints="NO" id="gQj-Xw-4OI">
+                                <rect key="frame" x="110" y="351" width="194" height="194"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="CNu-UZ-Kxx"/>
-                                    <constraint firstAttribute="height" constant="200" id="fe4-Ea-yfe"/>
+                                    <constraint firstAttribute="width" constant="194" id="AWZ-dc-Y44"/>
+                                    <constraint firstAttribute="height" constant="194" id="WqD-NT-JBJ"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
-                            <constraint firstItem="PIp-sd-hre" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="R83-OY-ix8"/>
-                            <constraint firstItem="PIp-sd-hre" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="sAs-75-XdT"/>
+                            <constraint firstItem="gQj-Xw-4OI" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Aa5-zS-581"/>
+                            <constraint firstItem="gQj-Xw-4OI" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="eF6-uQ-3TX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -40,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Image" width="512" height="512"/>
+        <image name="qqq" width="512" height="512"/>
     </resources>
 </document>
